manifests/exercise-4.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: exercise-4
---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: exercise-4
spec:
  tolerations:
    - key: dedicated
      operator: Equal
      value: special-app
      effect: NoSchedule
  containers:
    - name: c1
      image: alpine:latest
      command: ["/bin/sh"]
      args:
        - -c
        - |
          [...]
      volumeMounts:
        - name: my-volume
          mountPath: /data
      resources:
        requests:
          memory: "32Mi"
          cpu: "50m"
        limits:
          memory: "64Mi"
          cpu: "100m"
  volumes:
    - name: my-volume
      persistentVolumeClaim:
        claimName: my-pvc
  restartPolicy: Never
